hphp/test/zend/bad/ext/standard/tests/streams/bug49936_win32.php.skipif
<?php
if( substr(PHP_OS, 0, 3) != "WIN" )
  die("skip. Do run on Windows only");
?>